<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BMICalculator</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <string name="bmi">BMI Results</string>
    <string name="bmiValue">BMI Status</string>
    <string name="toggle">Change unit measurement</string>
    <string name="buttonText">Calculate</string>

</resources>
